# Bot

./: .gitignore  CMakeLists.txt  README.md  app.aps
src/: Constants.h  Detector.cpp  Detector.h  Fullscreen.cpp  Fullscreen.h  Keyboard.cpp  Keyboard.h  main.cpp
src/resources/: app.rc
